[package]
name = "serde_urlencoded-fuzz"
version = "0.0.0"
publish = false
edition = "2018"

[package.metadata]
cargo-fuzz = true

[dependencies]
libfuzzer-sys = "0.4"
serde = { version = "1.0.100", features = ["derive"] }

[dependencies.serde_urlencoded]
path = ".."

# Prevent this from interfering with workspaces
[workspace]
members = ["."]

[features]
debug = []

[[bin]]
name = "serial_deserial"
path = "fuzz_targets/serial_deserial.rs"
test = false
doc = false

[profile.release]
debug = true
