[package]
name = "ttf-parser-fuzz"
version = "0.0.0"
publish = false
edition = "2018"

[package.metadata]
cargo-fuzz = true

[dependencies]
libfuzzer-sys = "0.4"
serde = "1.0"
serde_json = "1.0"
ttf-parser = { path = "..", features = ["apple-layout"] }

[[bin]]
name = "fuzz-base"
path = "fuzz_targets/fuzz-base.rs"
test = false
doc = false
bench = false

[[bin]]
name = "fuzz-aat"
path = "fuzz_targets/fuzz-aat.rs"
test = false
doc = false
bench = false

[[bin]]
name = "fuzz-cpal"
path = "fuzz_targets/fuzz-cpal.rs"
test = false
doc = false
bench = false

[[bin]]
name = "fuzz-table"
path = "fuzz_targets/fuzz-table.rs"
test = false
doc = false
bench = false

[[bin]]
name = "fuzz-table-with-builder"
path = "fuzz_targets/fuzz-table-with-builder.rs"
test = false
doc = false
bench = false

[[bin]]
name = "fuzz-glyph-index"
path = "fuzz_targets/fuzz-glyph-index.rs"
test = false
doc = false
bench = false

[[bin]]
name = "fuzz-outline"
path = "fuzz_targets/fuzz-outline.rs"
test = false
doc = false
bench = false

[[bin]]
name = "fuzz-variable-outline"
path = "fuzz_targets/fuzz-variable-outline.rs"
test = false
doc = false
bench = false
