[package]
name = "zip-fuzz"
version = "0.0.0"
authors = ["David Korczynski <david@adalogics.com>"]
publish = false
edition = "2018"

[package.metadata]
cargo-fuzz = true

[dependencies]
libfuzzer-sys = "0.3"
#zip = { path = ".." , version = "0.5"}
zip = { path = ".." }

[[bin]]
name = "from_zip"
path = "fuzz_targets/fuzz_zip.rs"

# Prevent this from interfering with workspaces
[workspace]

